--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ mybatis.mapper-locations=classpath:mapping/*.xml
 
 spring.datasource.name=miaosha
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/miaosha?useSSL=false&useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=sdaqzjw126
+spring.datasource.username=****
+spring.datasource.password=*******
 
 #\u4F7F\u7528druid\u6570\u636E\u6E90
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
